--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,10 @@
   padding: 0;
   box-sizing: border-box;
 }
+body{
+    background-image: url(https://img.freepik.com/foto-gratis/fondo-textura-marmol-beige-grisaceo_53876-124564.jpg?semt=ais_hybrid&w=740&q=80);
+    
+}
 
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
